--- a/settings.gradle
+++ b/settings.gradle
@@ -12,6 +12,10 @@ pluginManagement {
         eachPlugin {
             if (requested.id.id == "net.minecraftforge.gradle.tweaker-client") {
                 useModule("com.github.asbyth:ForgeGradle:${requested.version}")
+            } else if (requested.id.id == "org.spongepowered.mixin") {
+                useModule("com.github.Skytils:mixingradle:${requested.version}")
+            } else if (requested.id.id == "org.bookmc.ink") {
+                useModule("com.github.BookMC:ink:${requested.version}")
             }
         }
     }
